# credit-valuation-system

./: README.md  app.py  pyproject.toml
.claude/: settings.local.json
examples/: run_valuation.py  sample_input.csv  valuation_results.csv
src/credit_valuation/: __init__.py  engine.py  io.py  models.py
src/credit_valuation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  helpers.py  test_engine.py  test_integration.py  test_io.py  test_models.py
